src/objects/Animal_Origin__c.object
<CustomObject>
    <fields>
        <fullName>Animal__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Animal</label>
        <referenceTo>Animal__c</referenceTo>
        <relationshipLabel>Animal Origins</relationshipLabel>
        <relationshipName>Animal_Origins</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <label>Country</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Weight__c</fullName>
        <label>Weight</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Animal Origin</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Animal Origin Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Animal Origins</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>